<resources>
	<string name="app_name">Berrets</string>
	<string name="title_home">Beranda</string>
	<string name="title_store">Pasar</string>
	<string name="title_community">Komunitas</string>
	<string name="username">username</string>
	<string name="alt_hero_scenery">Scenery Image reflected based on the time</string>
	<string name="user_greeting">Selamat %1$s %2$s</string>
	<string name="user_greeting_under">Yuk majukan pertanian bersama kami!</string>
	<string name="hint_search">Telusuri Berrets disini…</string>
	<string name="label_recommendation">Rekomendasi\nTeknik Pertanian</string>
	<string name="label_detection">Deteksi\nKualitas Beras</string>
	<string name="label_pricing">Harga\nPasar Beras</string>
	<string name="label_others">Lainnya</string>
	<string name="notification">Notifikasi</string>
	<string name="search">Pencarian</string>
	<string name="user_personal_profile_image">foto profil anda</string>
	<string name="hint_comment">Yuk bagikan aktivitas Anda…</string>
	<string name="desc_button_add_image">menambahkan gambar pada komentar</string>
	<string name="desc_button_add_emotion">menambahkan emosi pada komentar</string>
	<string name="desc_button_add_location">menambahkan lokasi pada komentar</string>
	<string name="label_share">Bagikan</string>
	<string name="label_all">Semua</string>
	<string name="label_general">Umum</string>
	<string name="label_activity">Kegiatan</string>
	<string name="label_tips_and_tricks">Tips &amp; Trik</string>
	<string name="label_information">Informasi</string>
	<string name="dot">•</string>
	<string name="post_time">40m</string>
	<string name="placeholder_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</string>
	<string name="hint_like_post">Tombol untuk like postingan</string>
	<string name="count_like">12</string>
	<string name="hint_reply_post">Tombol untuk membalas postingan</string>
	<string name="count_reply">0</string>
	<string name="count_bookmark">0</string>
	<string name="hint_bookmark_post">Tombol untuk bookmark postingan</string>
	<string name="hint_share_post">Tombol untuk share postingan</string>
	<string name="hint_create_post">Tombol untuk membuat postingan</string>
	<string name="alt_hero_quality_detection">Hero image for quality detection</string>
	<string name="quality_greeting">Mari Kita Mulai</string>
	<string name="quality_greeting_under">Yuk deteksi beras putih Anda</string>
	<string name="rice_quality">Kualitas Beras</string>
	<string name="rice_quality_specific">Berdasarkan syarat khusus beras</string>
	<string name="label_quality">KUALITAS</string>
	<string name="premium">PREMIUM</string>
	<string name="medium_i">MEDIUM I</string>
	<string name="medium_ii">MEDIUM II</string>
	<string name="lower">BAWAH</string>
	<string name="hint_take_camera_detection">Tombol untuk mengambil gambar serta deteksi</string>
	<string name="label_rice_parameter">Parameter Beras</string>
	<string name="label_rice_parameter_under">Standar untuk menetapkan mutu beras</string>
	<string name="label_rice_type">Butir Kepala</string>
	<string name="butir_kapur">Butir Kapur</string>
	<string name="butir_kepala">Butir Kepala</string>
	<string name="butir_patah">Butir Patah</string>
	<string name="butir_menir">Butir Menir</string>
	<string name="butir_rusak">Butir Rusak</string>
	<string name="kutu">Kutu</string>
	<string name="batu">Batu</string>
	<string name="sekam">Sekam</string>
	<string name="butir_merah">Butir Merah</string>
	<string name="butir_gabah">Butir Gabah</string>
	<string name="description_rice_type">Deskripsi kualitas beras</string>
	<string name="description_butir_kapur">Butir beras dengan ukuran lebih kecil dari 0,2 bagian butir beras utuh</string>
	<string name="description_butir_kepala">Butir beras dengan ukuran lebih besar atau sama dengan 0,8 bagian dari butir beras utuh</string>
	<string name="description_butir_patah">Butir beras dengan ukuran lebih besar dari 0,2 sampai dengan lebih kecil 0,8 bagian dari butir beras utuh</string>
	<string name="description_butir_menir">Butir beras dengan ukuran lebih kecil dari 0,2 bagian butir beras utuh</string>
	<string name="description_butir_rusak">Butir beras dengan ukuran lebih besar atau sama dengan 0,8 bagian dari butir beras utuh</string>
	<string name="description_kutu">Butir beras dengan ukuran lebih besar dari 0,2 sampai dengan lebih kecil 0,8 bagian dari butir beras utuh</string>
	<string name="description_batu">Butir beras dengan ukuran lebih besar dari 0,2 sampai dengan lebih kecil 0,8 bagian dari butir beras utuh</string>
	<string name="description_sekam">Butir beras dengan ukuran lebih kecil dari 0,2 bagian butir beras utuh</string>
	<string name="description_butir_merah">Butir beras berwarna merah karena faktor fisiologi pascapanen dan pengaruh lingkungan atau cuaca.</string>
	<string name="description_butir_gabah">Butir padi yang sekamnya belum terkelupas.</string>
	<string name="in">Masuk</string>
	<string name="login_greeting">Senang Bisa\nBertemu Kembali</string>
	<string name="login_greeting_under">Masukkan akun Anda untuk memulai kembali</string>
	<string name="hint_login_email">Alamat Email</string>
	<string name="login_email_error">Gagal masuk! Periksa nama pengguna atau kata sandi</string>
	<string name="hint_login_password">Kata Sandi</string>
	<string name="login_remember">Ingat saya</string>
	<string name="forget_password">Lupa Kata Sandi?</string>
	<string name="or">atau</string>
	<string name="login_google">Lanjutkan dengan Google</string>
	<string name="login_facebook">Lanjutkan dengan Facebook</string>
	<string name="no_account">Belum punya akun?</string>
	<string name="register">Daftar</string>
	<string name="title_create_account">Lengkapi\nData Akun Anda</string>
	<string name="title_create_account_under">Selangkah lagi nih! Silahkan isi dengan sesuai</string>
	<string name="account_information">Informasi Akun</string>
	<string name="hint_name_register">Nama Pengguna</string>
	<string name="error_name_register">Nama pengguna telah terdaftar! Silahkan coba yang lain</string>
	<string name="hint_fullname_register">Nama Lengkap</string>
	<string name="hint_password_register">Kata Sandi</string>
	<string name="hint_password_confirm_register">Konfirmasi Kata Sandi</string>
	<string name="error_password_register">Kata sandi tidak cocok! Silahkan periksa dan coba lagi</string>
	<string name="title_role_register">Sebagai apa Anda dalam aplikasi ini?</string>
	<string name="traditional_trader">Pedagang Pasar Tradisional</string>
	<string name="modern_trader">Pedagang Pasar Modern</string>
	<string name="producer">Produsen</string>
	<string name="wholesalers">Pedagang Besar</string>
	<string name="title_identification_overview">Ikhtisar Identifikasi</string>
	<string name="detail">Detail</string>
	<string name="rice_grains">BUTIR BERAS</string>
	<string name="market_price">HARGA PASAR</string>
	<string name="denom_kg">/ Kg</string>
	<string name="conditions">Syarat Umum</string>
	<string name="water_level">KADAR AIR</string>
	<string name="rice_stench">BAU BERAS</string>
	<string name="chemist_level">BAHAN KIMIA</string>
	<string name="handle_recommendation">Rekomendasi Penanganan</string>
	<string name="handle_recommendation_under">Pelajari lebih lanjut untuk mengevaluasi kualitas beras putih yang Anda identifikasi</string>
	<string name="detection_history">Riwayat Deteksi</string>
	<string name="hint_back_button_register">Tombol mundur ke Onboard Activity</string>
	<string name="take_a_picture_button">Tombol untuk mengambil foto</string>
	<string name="switch_camera_button">Tombol untuk memutarkan kamera</string>
</resources>