<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/mobile_navigation"
	app:startDestination="@+id/navigation_home">

	<fragment
		android:id="@+id/navigation_home"
		android:name="com.capstone.berrets.view.main.home.HomeFragment"
		android:label="@string/title_home"
		tools:layout="@layout/fragment_home" />

	<fragment
		android:id="@+id/navigation_store"
		android:name="com.capstone.berrets.view.main.store.StoreFragment"
		android:label="@string/title_store"
		tools:layout="@layout/fragment_store" />

	<fragment
		android:id="@+id/navigation_community"
		android:name="com.capstone.berrets.view.main.community.CommunityFragment"
		android:label="@string/title_community"
		tools:layout="@layout/fragment_community" />

	<fragment
		android:id="@+id/navigation_profile"
		android:name="com.capstone.berrets.view.main.profile.ProfileFragment"
		android:label="@string/username"
		tools:layout="@layout/fragment_profile" />

</navigation>