<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@color/backgroundSecondary">

	<View
		android:id="@+id/top_divider"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:background="?attr/colorControlHighlight"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

	<de.hdodenhof.circleimageview.CircleImageView
		android:id="@+id/post_profile_image"
		android:layout_width="48dp"
		android:layout_height="48dp"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:src="@drawable/sample_avatar"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/post_identity"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="16dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/post_profile_image">

		<LinearLayout
			android:id="@+id/post_user_layout"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<TextView
				style="@style/TextBase_SemiBold"
				android:id="@+id/name"
				android:textColor="@color/textPrimary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				tools:text="Berrets" />

			<TextView
				style="@style/TextBase_Regular"
				android:id="@+id/user_name"
				android:textColor="@color/textSecondary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginHorizontal="8dp"
				tools:text="Berrets" />

			<TextView
				android:id="@+id/dot"
				android:textColor="@color/textSecondary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginEnd="8dp"
				android:text="@string/dot" />

			<TextView
				style="@style/TextBase_Regular"
				android:id="@+id/post_time"
				android:textColor="@color/textSecondary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/post_time" />

		</LinearLayout>

	</androidx.constraintlayout.widget.ConstraintLayout>

	<TextView
		style="@style/TextBase_Regular"
		android:id="@+id/post_content"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="8dp"
		android:textColor="@color/textPrimary"
		android:text="@string/placeholder_lorem"
		app:layout_constraintStart_toEndOf="@+id/post_profile_image"
		app:layout_constraintTop_toBottomOf="@+id/post_identity"
		app:layout_constraintBottom_toTopOf="@+id/post_actions"
		app:layout_constraintEnd_toEndOf="parent" />

	<LinearLayout
		android:id="@+id/post_actions"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16dp"
		android:layout_marginTop="8dp"
		android:orientation="horizontal"
		android:gravity="center_vertical"
		app:layout_constraintTop_toBottomOf="@+id/post_content"
		app:layout_constraintStart_toEndOf="@+id/post_profile_image"
		app:layout_constraintEnd_toEndOf="parent">

		<ImageView
			android:id="@+id/like_icon"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:contentDescription="@string/hint_like_post"
			android:src="@drawable/ic_heart"
			app:tint="@color/textSecondary"/>

		<TextView
			style="@style/TextSmall_Regular"
			android:id="@+id/like_count"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/count_like"
			android:textColor="@color/textSecondary"
			android:layout_marginStart="4dp"
			android:layout_marginEnd="30dp"/>

		<ImageView
			android:id="@+id/comment_icon"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:contentDescription="@string/hint_reply_post"
			android:src="@drawable/ic_chats"
			app:tint="@color/textSecondary" />

		<TextView
			style="@style/TextSmall_Regular"
			android:id="@+id/comment_count"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/count_reply"
			android:textColor="@color/textSecondary"
			android:layout_marginStart="4dp"
			android:layout_marginEnd="30dp"/>

		<ImageView
			android:id="@+id/bookmark_icon"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:contentDescription="@string/hint_bookmark_post"
			android:src="@drawable/ic_bookmark"
			app:tint="@color/textSecondary" />

		<TextView
			style="@style/TextSmall_Regular"
			android:id="@+id/bookmark_count"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/count_bookmark"
			android:textColor="@color/textSecondary"
			android:layout_marginStart="4dp"
			android:layout_marginEnd="30dp"/>

		<ImageView
			android:id="@+id/share_icon"
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:contentDescription="@string/hint_share_post"
			android:src="@drawable/ic_share"
			app:tint="@color/textSecondary" />

	</LinearLayout>

	<View
		android:id="@+id/bottom_divider"
		android:layout_width="0dp"
		android:layout_height="1dp"
		android:layout_marginTop="16dp"
		android:background="?attr/colorControlHighlight"
		app:layout_constraintTop_toBottomOf="@+id/post_actions"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>